k8s-deploy/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: parliamentary-questions
  name: parliamentary-questions
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: parliamentary-questions
  template:
    metadata:
      labels:
        app: parliamentary-questions
    spec:
      containers:
        - command:
            - sh
            - "-c"
            - "bundle exec puma -p 3000"
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
          imagePullPolicy: Always
          name: parliamentary-questions-rails-app
          ports:
            - containerPort: 3000
