k8s-deploy/development/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: parliamentary-questions-service
  namespace: parliamentary-questions-development
  labels:
    app: parliamentary-questions
spec:
  selector:
    app: parliamentary-questions
  ports:
  - name: parliamentary-questions-rails-app
    protocol: TCP
    port: 3000
    targetPort: 3000
  # - name: postgres
  #   protocol: TCP
  #   port: 5432
  #   targetPort: 3000
  # - name: api
  #   protocol: TCP
  #   port: 8888
  #   targetPort: 8888
