k8s-deploy/development/ingress-live.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pq-development
  namespace: parliamentary-questions-development
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: pq-development-parliamentary-questions-development-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  rules:
    - host: development.trackparliamentaryquestions.service.gov.uk
      http:
        paths:
          - backend:
              serviceName: parliamentary-questions-service
              servicePort: 3000
            path: /
  tls:
    - hosts:
        - development.trackparliamentaryquestions.service.gov.uk
      secretName: parliamentary-questions-development-cert
