k8s-deploy/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pq-development
  namespace: parliamentary-questions-development
spec:
  tls:
  - hosts:
    - development.trackparliamentaryquestions.service.gov.uk
    secretName: parliamentary-questions-development-cert
  rules:
  - host: development.trackparliamentaryquestions.service.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: parliamentary-questions-service
          servicePort: 3000
